# kio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE  kio_bench.txt  main.cpp  photon_bench.txt  readme.md
benchmarks/: CMakeLists.txt  char_count_benchmark.cpp  net_echo_benchmark.cpp  worker_startup_benchmark.cpp
benchmarks/cpp/: CMakeLists.txt  net_perf.cpp  net_perf_photon.cpp
benchmarks/rust/tcp/: Cargo.toml
benchmarks/rust/tcp/src/: main.rs
bitcask/: CMakeLists.txt  main.cpp  readme.md
bitcask/include/: bitcask.h  common.h  compactor.h  config.h  const.h  data_file.h  datafile.h  entry.h  fd_cache.h  file_handle.h  file_id.h  hint_file.h  keydir.h  partition.h  stats.h
bitcask/src/: bitcask.cpp  common.cpp  compactor.cpp  data_file.cpp  datafile.cpp  entry.cpp  fd_cache.cpp  hint_file.cpp  keydir.cpp  partition.cpp  partition_old.cpp
bitcask/tests/: CMakeLists.txt  bitkv_advanced_test.cpp  bitkv_test.cpp  compactor_test.cpp  data_file_test.cpp  datafile_test.cpp  entry_codec_test.cpp  entry_test.cpp  file_operations_test.cpp  hint_file_test.cpp  integration_test.cpp  keydir_test.cpp  partition_integration_test.cpp  partition_test.cpp
bitcask/tests/integration/: bitkv_test.cpp  compactor_test.cpp  partition_test.cpp
bitcask/tests/unit/: config_test.cpp  data_file_test.cpp  entry_test.cpp
build2/: DartConfiguration.tcl
build2/demo/: tcp_demo
build2/tests/: buffer_pool_test[1]_include.cmake  bytes_mut_tests[1]_include.cmake  filemanager_test[1]_include.cmake  kio_logger_test[1]_include.cmake  kio_worker_test[1]_include.cmake  lock_free_free_queue[1]_include.cmake  sync_tests[1]_include.cmake  sync_wait_test[1]_include.cmake
cmake/: FindAbseil.cmake  FindBenchmark.cmake  FindCRC32C.cmake  FindGTest.cmake  FindGtest.cmake  FindPhotonLibOS.cmake  FindSPlog.cmake  FindYLT.cmake  Findgflags.cmake
core/: CMakeLists.txt
core/include/: async_logger.h  coro.h  errors.h  fs.h  fs_demo.h  net.h  sync_wait.h
core/include/ds/: buffer_pool.h  mpsc_queue.h
core/include/io/: metrics.h  uring_awaitable.h  worker.h  worker_pool.h
core/include/metrics/: registry.h  utils.h
core/include/sync/: baton.h  event.h  when_any.h
core/src/: coro.cpp  fs.cpp  io_pool.cpp  net.cpp
core/src/ds/: buffer_pool.cpp
core/src/io/: metrics.cpp  worker.cpp  worker_pool.cpp
core/src/metrics/: serializer.cpp
coro/: CMakeLists.txt
coro/include/: coro.h  fs.h  io_pool.h  net.h
coro/src/: coro.cpp  fs.cpp  io_pool.cpp
demo/: CMakeLists.txt  advanced_patterns_next.cpp  baton.cpp  create_cert.sh  demo_logging.cpp  file_demo.cpp  fs.cpp  fs_demo.cpp  ktls_client.cpp  ktls_server.cpp  regular_tls_client.cpp  retry01.cpp  tcp.cpp  tcp_client.cpp  tcp_next.cpp  tcp_worker_callback.cpp  tcp_worker_no_callback.cpp  tcp_worker_no_callback_v2.cpp  test_ktls_echo_client.py  timer.cpp
demo/perf/: net_perf.cpp
demo/tls_file_server/: file_client.cpp  file_server.cpp  protocol.h  tcp_demo_afinity_next.cpp
docs/: aio_architecture.md  benchmark.md  bitcask_implementation_fixes.md  build.md  io_traces.md  kio_architecture.md  kio_hybridlog_spec.md  kv_design_options.md  metrics.md  rfc_distributed_bitkv.md
examples/: CMakeLists.txt
examples/aio/: 00_logger.cpp  01_timers.cpp  02_work_queue.cpp  03_m_server_gemini.cpp  04_dns_resolve.cpp  05_file_copy.cpp  06_worker_wackup.cpp  07_signal_shutdown.cpp  08_hello_http.cpp  09_blocking_pool.cpp  201_timers.cpp  (+18 more)
io_pool/: CMakeLists.txt  executor.hpp  io.hpp  kio_logger.hpp  net.hpp  readme.md  result.hpp  runtime.hpp
kio/: CMakeLists.txt  worker_review.h
kio/core/: async_logger.h  bytes_mut.h  chunked_buffer.cpp  chunked_buffer.h  coro.h  errors.h  io_uring_awaitable.h  istream.h  metrics_collector.cpp  metrics_collector.h  op_pool.h  safe_completion.h  sync_wait.h  test_helpers.h  uring_awaitable.h  worker.cpp  worker.h  worker_pool.cpp  worker_pool.h
kio/fs/: fs.cpp  fs.h
kio/include/: fs.h  net.h
kio/include/io/: worker.h  worker_pool.h
kio/include/metrics/: collector.h  model.h  serializer.h  server.h
kio/include/sync/: baton.h  event.h  when_any.h
kio/kio-next-resources/: CPU_PROFILING_GUIDE.md  IoUringExecutor_Architecture_current.md  IoUringExecutor_QuickStart_current.md
kio/metrics/: collector.h  model.h  registry.h  serializer.cpp  serializer.h  server.cpp  server.h  utils.h
kio/net/: net.cpp  net.h  socket.h
kio/next/: COMPLETE_DIAGNOSIS.md  DESIGN.md  GETTING_STARTED.md  bench_tuining.sh  diagnosis.md  io_awaiters.h  io_awaiters_multishot.h  io_uring_executor.cpp  io_uring_executor.h  safety_rules.md  tcp_demo_v1_optimized.cpp
kio/resp/: parser.cpp  parser.h  writer.h
kio/src/: coro.cpp  fs.cpp  net.cpp
kio/src/ds/: buffer_pool.cpp
kio/src/io/: metrics.cpp  worker.cpp  worker_pool.cpp
kio/src/metrics/: serializer.cpp  server.cpp
kio/sync/: baton.h  baton_impl.h  event.h  mpsc_queue.h  sync_wait.h  when_any.h
kio/tests/: CMakeLists.txt  chunked_buffer_test.cpp  filemanager_test.cpp  kio_logger_test.cpp  sync_wait_test.cpp  worker_test.cpp
kio/tests/ds/: bytes_mut_test.cpp  mpsc_queue_test.cpp
kio/tests/resp/: integration_test.cpp  parser_test.cpp  writer_test.cpp
kio/tests/sync/: baton_test.cpp
kio/tls/: context.cpp  context.h  listener.cpp  listener.h  stream.cpp  stream.h
runtime/: CMakeLists.txt  executor.hpp  io.hpp  mt_example.cpp  runtime.hpp
runtime/demo/: baton_demo.cpp  example.cpp  mt_example.cpp  tcp_demo.cpp
runtime/tests/: executor_test.cpp
tests/: CMakeLists.txt  filemanager_test.cpp  kio_logger_test.cpp  sync_wait_test.cpp  worker_test.cpp
tests/aio/: 100_task_tests.cpp  102_io_context.cpp  200_io_ops_tests.cpp  201_io_helpers_tests.cpp  202_timeout_tests.cpp  203_net_tests.cpp  aio_tests.cpp  blocking_pool_test.cpp  io_helpers_tests.cpp  pipe_pool_tests.cpp  task_group_tests.cpp  test_helpers.hpp
tests/ds/: buffer_pool_test.cpp  bytes_mut_test.cpp  mpsc_queue_test.cpp
tests/sync/: baton_test.cpp  event_test.cpp  when_any_test.cpp
utilities/: CMakeLists.txt  baton.hpp  kio_logger.hpp  net.hpp  result.h
(+61 files in other folders)
